<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/untitled_design_12_"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Task Input -->
    <EditText
        android:id="@+id/taskInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/background_edit"
        android:hint="@string/enter_a_task" />

    <!-- Task Description Input -->
    <EditText
        android:id="@+id/taskDescription"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/background_edit"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_task_description" />

    <!-- Date Picker -->
    <Button
        android:id="@+id/btnPickDate"
        android:layout_width="200dp"
      android:layout_marginLeft="75dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/button"
        android:text="@string/pick_date" />

    <!-- Time Picker -->
    <Button
        android:id="@+id/btnPickTime"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/button"
        android:text="@string/pick_time" />

    <!-- Add/Update Button -->
    <Button
        android:id="@+id/btnAddUpdate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="75dp"
        android:backgroundTint="@color/button"
        android:text="@string/add_task_" />

    <!-- List of Tasks -->
    <ListView
        android:id="@+id/taskList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

</LinearLayout>
