<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <!-- Task Title -->
    <TextView
        android:id="@+id/taskitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="22sp"
        android:text="@string/task_title" />

    <!-- Task Description -->
    <TextView
        android:id="@+id/taskDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_description"
        android:textColor="@color/button"
        android:textSize="20sp"
        android:textStyle="normal"
        android:layout_marginTop="4dp" />

    <!-- Task Date and Time -->
    <TextView
        android:id="@+id/taskdateTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_and_time"
        android:textSize="20sp"
        android:textColor="@color/button"
        android:layout_marginTop="4dp" />

    <!-- Task Countdown Timer -->
    <TextView
        android:id="@+id/taskCountdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/countdown_timer"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/text_4_color"
        android:layout_marginTop="4dp" />

</LinearLayout>
