<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="8dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="406dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/untitled_design_8__removebg_preview" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:text="@string/welcome_back"
                android:textColor="@color/button"
                android:textSize="48sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edit_text"
                android:ems="10"
                android:hint="@string/enter_username"
                android:inputType="text"
                android:padding="8dp"
                android:textColorHint="@color/text_color" />

            <EditText
                android:id="@+id/editTextText1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edit_text"
                android:ems="10"
                android:hint="@string/enter_password"
                android:inputType="text"
                android:padding="8dp"
                android:textColorHint="@color/text_color" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="end"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="32dp"
                app:srcCompat="@drawable/arrow_1_" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/happy__1_" />


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>